[REFACTOR] Fix errors on staging environment